@@ -52,6 +52,9 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
         self.toolButtonDeviceIsLocked.setVisible(False)
         self.labelDeviceIsLocked.setVisible(False)
         self.toolButtonDeviceIsLocked.setIcon(QtGui.QIcon("synce-kpm/data/lock.svg"))
+        self.viewPartnerships.setVisible(False)
+        self.button_add_pship.setVisible(False)
+        self.button_delete_pship.setVisible(False)
 
         self._showingUnlockMessage = False
 
@@ -86,6 +89,15 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
         self.phoneCommunicator = PhoneCommunicator(self.updateView_cb)
         
         self.installWindow = dialogs.synce_kpm_installwindow.synce_kpm_installwindow( self.phoneCommunicator )
+
+
+        #
+        # Setup the model for the treeView, representing the partnerships
+        self.modelPartnerships = QStandardItemModel(0,1)
+        self.viewPartnerships.setModel(self.modelPartnerships)
+        self.viewPartnerships.drawBranches = self.myTest
+        self.modelPartnerships.setHeaderData(0, QtCore.Qt.Horizontal, QtCore.QVariant("Partnerships"))
+
 
     """
     @pyqtSignature("")
@@ -157,7 +169,9 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
             self.toolButtonDeviceIsLocked.setVisible(False)
             self.labelDeviceIsLocked.setVisible(False)
 
+            self.modelPartnerships.clear()
             return
+
 
         if event.reason == ACTION_PHONE_AUTHORIZED:
             self.toolButtonDeviceIsLocked.setVisible(False)
@@ -173,6 +187,8 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
             
             self.updateStatusBar()
             self.updateDeviceStatus()
+            self.updatePartnerships()
+            return
             
 
 
@@ -217,7 +233,23 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
             self.updateInstalledProgramsList()
             return
 
+        if event.reason == ACTION_SYNCENGINE_CHANGED_ONLINE:
+            self.labelSyncEngineNotRunning.setVisible(False)
+            self.viewPartnerships.setVisible(True)
+            self.button_add_pship.setVisible(False)
+            self.button_delete_pship.setVisible(False)
+            self.updatePartnerships()
+            return
+        
+        if event.reason == ACTION_SYNCENGINE_CHANGED_OFFLINE:
+            self.labelSyncEngineNotRunning.setVisible(True)
+            self.viewPartnerships.setVisible(False)
+            self.button_add_pship.setVisible(False)
+            self.button_delete_pship.setVisible(False)
+            self.updatePartnerships()
+            return
 
+        print "Unhandled event: %i"%event.reason
 
     def updateDeviceOwner(self):
         self.labelDeviceOwner.setText( self.phoneCommunicator.getDeviceOwner() )
@@ -334,4 +366,90 @@ class synce_kpm_mainwindow(QtGui.QMainWindow, dialogs.ui_synce_kpm_mainwindow.Ui
     def on_pushButton_Quit_clicked(self):
         self.quitApplication()
 
+
+    def myTest(self,  painter, rect, index):
+        pass
+
+
+    def myBBB(self, group, item):
+        childItem = QStandardItem(item)
+        childItem.setCheckable(True)
+        childItem.setEnabled(False)
+        group.appendRow( childItem )
+
+    def myAAA(self, parent):
+        self.myBBB(parent, "Contacts")
+        self.myBBB(parent, "Agenda")
+        self.myBBB(parent, "Email")
+        self.myBBB(parent, "Tasks")
+        self.myBBB(parent, "Files")
+
+
+    def myCCC(self, parent, item_types, selected_item_types):
+        for item_type in item_types:
+            #print item_types[item_type]
+
+            childItem = QStandardItem(item_types[item_type])
+            childItem.setCheckable(True)
+            childItem.setEnabled(False)
+            if item_type in selected_item_types:
+                childItem.setCheckState(QtCore.Qt.Checked )
+
+            parent.appendRow( childItem )
+
+    def updatePartnerships(self):
+        self.modelPartnerships.clear()
+        
+        
+        #Only if the sync-engine is running
+        if self.phoneCommunicator.syncEngineRunning:
+            sync_items, partnerships = self.phoneCommunicator.getPartnerships()
+
+            for pship in partnerships:
+                id,guid,name,hostname,devicename,items = pship 
+                
+                rootItem = QStandardItem( name )
+                rootItem.setIcon(self.iconConnected)
+                self.modelPartnerships.appendRow(rootItem)
+                
+                self.myCCC( rootItem, sync_items, items )
+
+
+
+        self.modelPartnerships.setHeaderData(0, QtCore.Qt.Horizontal, QtCore.QVariant("Partnerships"))
+        """
+        rootItem = QStandardItem( "Microsoft Exchange Server" )
+        rootItem.setIcon(self.iconConnected)
+        self.modelPartnerships.appendRow( rootItem)
+
+
+        rootItem2 = QStandardItem( "Linux PC" )
+        rootItem2.setIcon(self.iconDisconnected)
+        self.modelPartnerships.appendRow(rootItem2)
+
+        
+        self.myAAA(rootItem)
+        self.myAAA(rootItem2)
+        #self.childItem_1_Files = QStandardItem("Files")
+        #self.childItem_1_Files.setCheckable(True)
+        #rootItem.appendRow( self.childItem_1_Files )
+        """
+
+        self.viewPartnerships.expandAll()
+        
+        print "aaa"
+
+       
+    @pyqtSignature("")
+    def on_button_delete_pship_clicked(self):
+        if len( self.viewPartnerships.selectedIndexes() ) > 0:
+            print "something was selected"
+            print self.viewPartnerships.selectedIndexes()[0].row()
+            print self.viewPartnerships.selectedIndexes()[0].parent()
+        else:
+            print "something was selected"
+
+    @pyqtSignature("")
+    def on_BUTTON_TEST_clicked(self):
+        pass
 
